--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
-		<title>Dating Impala</title>
+		<title>Singles hive</title>
 	</head>
 
 	<body>
@@ -26,7 +26,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<div ng-click="redirect('homepage')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;">Dating Impala</div>
+					<div ng-click="redirect('homepage')" class="navbar-brand navbar-brand-centered" style="line-height: 1em; cursor: pointer;">Singles hive</div>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
